src/test/deca/syntax/invalid/op_modulo_plus.synt
op_modulo_plus.deca:11: